Adding corrections to documentation
